RESOLVED FIXED166472
REGRESSION (r209299): Selection is broken when you zoom in webpage using trackpad
https://bugs.webkit.org/show_bug.cgi?id=166472
Summary REGRESSION (r209299): Selection is broken when you zoom in webpage using trac...
Simon Fraser (smfr)
Reported 2016-12-23 22:14:53 PST
REGRESSION (r209299): Selection is broken when you zoom in webpage using trackpad
Attachments
Patch (33.18 KB, patch)
2016-12-23 22:39 PST, Simon Fraser (smfr)
thorton: review+
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-elcapitan (862.81 KB, application/zip)
2016-12-23 23:41 PST, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (826.46 KB, application/zip)
2016-12-23 23:45 PST, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-elcapitan (1.62 MB, application/zip)
2016-12-23 23:49 PST, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (deleted)
2016-12-24 00:03 PST, Build Bot
no flags
Patch (36.79 KB, patch)
2016-12-25 12:20 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2016-12-23 22:39:58 PST
Tim Horton
Comment 2 2016-12-23 23:08:07 PST
Comment on attachment 297734 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=297734&action=review > Source/WebCore/ChangeLog:11 > + the "absoluteRect" passed is in actually in zoomed document coordinates for all the callers I tested. Passed is in? > Source/WebCore/rendering/RenderLayer.cpp:2578 > + // Move the target rect into "scrollView contents" coordinates. Should we have a named function to do this? > LayoutTests/TestExpectations:54 > +# Document autoscroll tests only work on Mac WK2 :(
Build Bot
Comment 3 2016-12-23 23:41:33 PST
Comment on attachment 297734 [details] Patch Attachment 297734 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2778406 New failing tests: fast/transforms/selection-bounds-in-transformed-view.html fast/events/drag-select-when-zoomed-with-header.html
Build Bot
Comment 4 2016-12-23 23:41:37 PST
Created attachment 297735 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2016-12-23 23:45:29 PST
Comment on attachment 297734 [details] Patch Attachment 297734 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2778410 New failing tests: fast/transforms/selection-bounds-in-transformed-view.html fast/events/drag-select-when-zoomed-with-header.html
Build Bot
Comment 6 2016-12-23 23:45:33 PST
Created attachment 297736 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7 2016-12-23 23:49:32 PST
Comment on attachment 297734 [details] Patch Attachment 297734 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2778409 New failing tests: fast/transforms/selection-bounds-in-transformed-view.html fast/events/drag-select-when-zoomed-with-header.html
Build Bot
Comment 8 2016-12-23 23:49:35 PST
Created attachment 297737 [details] Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 9 2016-12-24 00:03:04 PST
Comment on attachment 297734 [details] Patch Attachment 297734 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/2778418 New failing tests: fast/events/drag-select-when-zoomed.html fast/events/drag-select-when-zoomed-with-header.html fast/scrolling/scroll-to-anchor-zoomed-header.html
Build Bot
Comment 10 2016-12-24 00:03:09 PST
Created attachment 297738 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 11 2016-12-25 12:20:09 PST
Simon Fraser (smfr)
Comment 12 2016-12-25 15:58:55 PST
Note You need to log in before you can comment on or make changes to this bug.