Tools/WebKitTestRunner/mac/EventSenderProxy.mm
@@ -603,7 +603,8 @@ void EventSenderProxy::mouseMoveTo(double x, double y)
     NSPoint position = [view convertPoint:NSMakePoint(x, y) toView:nil];
     m_position.x = position.x;
     m_position.y = position.y;
-    NSEvent *event = [NSEvent mouseEventWithType:(m_leftMouseButtonDown ? NSEventTypeLeftMouseDragged : NSEventTypeMouseMoved)
+    bool isDrag = m_leftMouseButtonDown;
+    NSEvent *event = [NSEvent mouseEventWithType:(isDrag ? NSEventTypeLeftMouseDragged : NSEventTypeMouseMoved)
                                         location:position
                                    modifierFlags:0 
                                        timestamp:absoluteTimeForEventTime(currentEventTime())
@@ -614,10 +615,14 @@ void EventSenderProxy::mouseMoveTo(double x, double y)
                                         pressure:0];
 
     NSPoint windowLocation = event.locationInWindow;
-    NSView *targetView = [m_testController->mainWebView()->platformView() hitTest:windowLocation];
+    // Always target drags at the WKWebView to allow for drag-scrolling outside the view.
+    NSView *targetView = isDrag ? m_testController->mainWebView()->platformView() : [m_testController->mainWebView()->platformView() hitTest:windowLocation];
     if (targetView) {
         [NSApp _setCurrentEvent:event];
-        [targetView mouseMoved:event];
+        if (isDrag)
+            [targetView mouseDragged:event];
+        else
+            [targetView mouseMoved:event];
         [NSApp _setCurrentEvent:nil];
     } else
         WTFLogAlways("mouseMoveTo failed to find a target view at %f,%f\n", windowLocation.x, windowLocation.y);
